	  geant build files. See bug#2657770.

	geyacc:

	* When specifying Eiffel types in the %token and %type clauses, in addition
	  to what was accepted so far, it is now possible to use 'like Current',
	  labeled tuples (e.g. 'TUPLE [i, j: INTEGER; s: STRING]') and type marks
	  such as 'expanded', 'reference', 'separate', 'attached', 'detachable',
	  '!' and '?'. See bug#2618271.

	Gobo Eiffel Kernel Library:

	* Added features `same_*_pathnames' to class KI_FILE_SYSTEM.
	* Features `test' in class KL_EQUALITY_TESTER and `equal_objects' in
	  class KL_ANY_ROUTINES now use the new ECMA construct '~' instead
	  of the combination `same_type' and then `is_equal'.

	Gobo Eiffel Lexical Library:

	* Fixed bug in LX_DFA_REGULAR_EXPRESSION where `compile ("foo\$")' was
	  setting `has_dollar' to True even though the dollar sign was escaped.

	Gobo Eiffel Tools Library:

	* Added support for keyword 'note' as a replacement of 'indexing'.
	  See bug#2499770.
	* Fixed bug where object-test local was not recognized as such when
	  appearing as target of an agent declaration.
	* Fixed bug where the type of an agent was not correctly determined
	  when the result type of the corresponding function contained a formal
	  generic parameter. It ended up being 'FUNCTION [ANY, TUPLE, BOOLEAN]'
	  instead of 'PREDICATE [ANY, TUPLE]'. See bug#2667604.

	Miscellaneous:

	* Removed classes and features that had been marked as obsolete
	  in 2004 or before.

Version 3.9 - 20 November 2008

	geant:

	* Removed support for SmartEiffel task <se>.

	gec:

	* Fixed some C compilation warnings when using gcc as back-end C compiler.
	  See bug#1961462.
	* Added support for object equality ('~' and '/~'). Equality expressions
	  ('=' and '/=') now use the semantics of object equality when the operands
	  are dynamically of expanded types.
	* Added experimental support for Qualified Anchored Types (types of the
	  form 'like a.b' or 'like {A}.b).

	gelint:
